--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "mkcomp",
+  "version": "1.0.0",
+  "description": "Quickly create React/Next.js components with CSS modules",
+  "type": "module",
+  "main": "mkcomp.ts",
+  "scripts": {
+    "mkcomp": "ts-node ./mkcomp.ts"
+  },
   "devDependencies": {
-    "ts-node": "^10.9.2"
-  }
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.4"
+  },
+  "author": "Mustafa Ozturk",
+  "license": "MIT"
 }
